cabal-version:      3.0
name:               blastMD
version:            0.0.0.1

synopsis: Simple, SEO-aware static Markdown blog engine for devs who like terminals
author:             Joey Thornberry
maintainer:         lewis.thornberry@christendom.edu

build-type:         Simple

common warnings
    ghc-options: -Wall

executable blastmd
    import:           warnings
    main-is:          Main.hs
    build-depends:    
      base ^>=4.17.2.1,
      markdown,
      containers,
      blaze-html,
      text,
      directory,
      filepath,
      time
    other-modules:
        Templating
        Compilation
        BlastMdIo
        Json
        Sitemap
    hs-source-dirs:   app
    default-language: Haskell2010

Test-Suite blastMD-test
    type: exitcode-stdio-1.0
    ghc-options: -Wall
    main-is:    Test.hs
    build-depends:
      base ^>=4.17.2.1,
      HUnit,
      markdown,
      containers,
      blaze-html,
      text,
      directory,
      filepath,
      time
    default-language: Haskell2010
    hs-source-dirs:   app
    other-modules:
        Templating
        Compilation
        BlastMdIo
        Json
        Sitemap
